first changes of chemical + research civics

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -613,7 +613,7 @@
 
 	civic_dystopian_society:1 "§L£tec_civic_feature£§!Dystopian Society"
 	civic_dystopian_society_desc:1 "['concept_tec_feature_civic']\n['concept_tec_living_standard_civic']\n\nOnly the elite of the elite deserve the best of the best. Everyone else is expected to provide for the ruling class and their lackeys."
-	civic_tooltip_dystopian_society_effects:1 "Force §Y$living_standard_dystopian_society$§! Living Standard, under which §Ynon-Ruler§! Jobs have decreased $r_consumer_goods$ Upkeep\nOnly §YRuler§! Jobs and  £job_enforcer£ $job_enforcer_plural$ have $r_amenities$ Upkeep\nMost £pop£ Pops generate §Y1§! additional £crime£ §Y$PLANET_CRIME_TITLE$§!\nOnly §YRuler§! Jobs can produce $r_amenities$\nForbids £building£ §Y$building_holo_theatres$§!"
+	civic_dystopian_society_tooltip:1 "§HForced Living Standard:§! £pop£ §Y$living_standard_dystopian_society$§!\nUnder such living standard:\n- §YNon-Ruler§! Jobs have decreased $r_consumer_goods$ Upkeep, no §Y$tec_loc_amenities$§! usage and generate §R1§! additional £crime£ §Y$PLANET_CRIME_TITLE$§!\n- §YRulers§! and §Y£job_enforcer£ Anti-Crime§! jobs don't produce base §Y$tec_loc_amenities$§! and consume extra §Y$tec_loc_amenities$§!.\n\n§HRestriction:§! Forbids £building£ §Y$building_holo_theatres$§!"
  # /
  # Evolved
 	# former civic_defenders_faith
@@ -916,30 +916,100 @@
 	civic_tec_regular_xenoreach_desc:0 "TO_DO_WIP"
 	civic_tec_regular_xenoreach_tooltip:0 "a.\n\n"
 
-	civic_tec_regular_labrats:0 "§P£tec_civic_job£§!Creative Testing"
-	civic_tec_regular_labrats_desc:0 "['concept_tec_job_alteration_civic']\n\nFor this society, the progress and advancements must be tested ''first-handed''; Voluntary and non voluntary test subjects are recruited and trained for experimenting with new technologies and discoveries."
-	civic_tec_regular_labrats_tooltip:0 "£building£ §YResearch Labs§! replace a £job_researcher£ Researcher job by a £job_researcher£ §YTest Subject§! worker job.\n- £job_researcher£ Test Subjects produce §Y$tec_loc_research_resources$§! at no upkeep, but have reduced £happiness£ §YHappiness§!.\n\nIf there is any £job_livestock£ Livestock species on the planet, £job_researcher£ Test Subjects will suffer no happiness penalty and each livestock will generate additional §Y$tec_loc_research_resources$§!."
+	# Research half-swap group
+		civic_tec_regular_researchers_labrats:0 "§P£tec_civic_job£§!Creative Testing"
+		civic_tec_regular_researchers_labrats_desc:0 "['concept_tec_job_alteration_civic']\n\nFor this society, the progress and advancements must be tested ''first-handed''; Voluntary and non voluntary test subjects are recruited and trained for experimenting with new technologies and discoveries."
+		civic_tec_regular_researchers_labrats_tooltip:0 "£building£ §YResearch Labs§! replace a £job_researcher£ Researcher job by a £job_researcher£ §YTest Subject§! worker job.\n- £job_researcher£ Test Subjects produce §Y$tec_loc_research_resources$§! at no upkeep, but have reduced £happiness£ §YHappiness§!.\n\nIf there is any £job_livestock£ Livestock species on the planet, £job_researcher£ Test Subjects will suffer no happiness penalty and each livestock will generate additional §Y$tec_loc_research_resources$§!."
 
-	civic_tec_regular_diversifier:0 "§P£tec_civic_job£§!Paradigmatic Diversifiers"
-	civic_tec_regular_diversifier_desc:0 "['concept_tec_job_alteration_civic']\n\nTO DO."
-	civic_tec_regular_diversifier_tooltip:0 "TO DO"
+		civic_tec_regular_researchers_diversifier:0 "§P£tec_civic_job£§!Paradigmatic Diversifiers"
+		civic_tec_regular_researchers_diversifier_desc:0 "['concept_tec_job_alteration_civic']\n\nTO DO."
+		civic_tec_regular_researchers_diversifier_tooltip:0 "TO DO"
 
-	civic_tec_regular_astrologers:0 "§P£tec_civic_job£§!Astral Cartographers"
-	civic_tec_regular_astrologers_desc:0 "['concept_tec_job_alteration_civic']\n\nTO DO."
-	civic_tec_regular_astrologers_tooltip:0 "TO DO"
+			civic_tec_corporate_researchers_diversifier:0 "TO DO"
+			civic_tec_corporate_researchers_diversifier_desc:0 "TO DO"
+
+		civic_tec_regular_researchers_astrologers:0 "§P£tec_civic_job£§!Astral Assesors"
+		civic_tec_regular_researchers_astrologers_desc:0 "['concept_tec_job_alteration_civic']\n\nTO DO."
+		civic_tec_regular_researchers_astrologers_tooltip:0 "TO DO"
+
+			civic_tec_corporate_researchers_astrologers:0 "TO DO"
+			civic_tec_corporate_researchers_astrologers_desc:0 "TO DO"
+	# /
+	# Researchers full swap
+		civic_tec_regular_researchers_historians:0 "§P£tec_civic_job£§!Psychohistoric Cultivation" 
+		civic_tec_regular_researchers_historians_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nSocietal advancements and future have been procedurally deducted and anticipated by this society with the help of expert physics, mathematicians, erudites and philosophers, reaching the point of continuously ensuring a way to properly anticipate any change with the sheer power of mathematics."
+		civic_tec_regular_researchers_historians_tooltip:0 "Researchers are replaced by Psychohistorians. Psychohistorians produce research (4-5-4) and unity (2), with 1 extra cg upkeep. Can enact the Psychohistory Analysis edict, which will accelerate certain events within the empire.\n\n"
+
+			civic_tec_corporate_researchers_historians:0 "TO DO"
+			civic_tec_corporate_researchers_historians_desc:0 "TO DO"
+
+		civic_tec_regular_researchers_technomancer:0 "§P£tec_civic_job£§!Technomancer Guild" 
+		civic_tec_regular_researchers_technomancer_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nFor this society, there is no real distinction between magic and a really advanced technology; entire schools of technomancer populate the highest research spheres, trying to make their own thesis and manuscripts as the valid options, with the oldests and wisest technomancer being the ones leading each one."
+		civic_tec_regular_researchers_technomancer_tooltip:0 "Researchers are replaced by Technomagicians. Technomagicians produce research (5-2-5).\n\n"
+
+			civic_tec_corporate_researchers_technomancer:0 "TO DO"
+			civic_tec_corporate_researchers_technomancer_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nTO DO"
+			civic_tec_corporate_researchers_technomancer_tooltip:0 "TO DO"
+
+		civic_tec_regular_researchers_starseekers:0 "§P£tec_civic_job£§!Star Seekers"
+		civic_tec_regular_researchers_starseekers_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nTO DO."
+		civic_tec_regular_researchers_starseekers_tooltip:0 "TO DO"
+
+			civic_tec_corporate_researchers_starseekers:0 "TO DO"
+			civic_tec_corporate_researchers_starseekers_desc:0 "TO DO"
+			civic_tec_corporate_researchers_starseekers_tooltip:0 "TO DO"
+
+		# Note: can perform eldritch experiments each 10 years
+		civic_tec_regular_researchers_eldritch:0 "§P£tec_civic_job£§!Eldritch Investigators"
+		civic_tec_regular_researchers_eldritch_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nTO DO"
+		civic_tec_regular_researchers_eldritch_tooltip:0 "TO DO"
+
+			civic_tec_corporate_researchers_eldritch:0 "§P£tec_civic_job£§!Paranormal INC"
+			civic_tec_corporate_researchers_eldritch_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nTO DO"
+			civic_tec_corporate_researchers_eldritch_tooltip:0 "TO DO"
 
 
-	civic_tec_regular_historians:0 "§P£tec_civic_job£§!Psychohistoric Cultivation" 
-	civic_tec_regular_historians_desc:0 "['concept_tec_job_alteration_civic']\n\nSocietal advancements and future have been procedurally deducted and anticipated by this society with the help of expert physics, mathematicians, erudites and philosophers, reaching the point of continuously ensuring a way to properly anticipate any change with the sheer power of mathematics."
-	civic_tec_regular_historians_tooltip:0 "Researchers are replaced by Psychohistorians. Psychohistorians produce research (4-5-4) and unity (2), with 1 extra cg upkeep. Can enact the Psychohistory Analysis edict, which will accelerate certain events within the empire.\n\n"
+		civic_tec_regular_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Innovation" 
+		civic_tec_regular_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nPraxis and morale should not be barriers for development, and as such the majority of the conducted research on this society is done via more than questionable methods; abductions, collateral effects or tests on the population itself are the norm and generally oversighted by authorities, as technological progress advances relentlessly."
+		civic_tec_regular_researchers_illicit_tooltip:0 "§HReplaces Building:§! £building£ §Y$building_research_lab_plural$§! with £building£ §Y$building_tec_illicit_lab_1_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_research$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
 
-	civic_tec_regular_technomancer:0 "§P£tec_civic_job£§!Technomancer Guild" 
-	civic_tec_regular_technomancer_desc:0 "['concept_tec_job_alteration_civic']\n\nFor this society, there is no real distinction between magic and a really advanced technology; entire schools of technomancer populate the highest research spheres, trying to make their own thesis and manuscripts as the valid options, with the oldests and wisest technomancer being the ones leading each one."
-	civic_tec_regular_technomancer_tooltip:0 "Researchers are replaced by Technomagicians. Technomagicians produce research (5-2-5).\n\n"
+			civic_tec_corporate_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Experimentation" 
+			civic_tec_corporate_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nSeveral undercover research agencies are hired by this corporation to conduct research experiments for the profitable advancement of the empire; while it is, surely, done via more than questionable methods, the economical and technological progress report immense growth values."
+			civic_tec_corporate_researchers_illicit_tooltip:0 "§HReplaces Building:§! £building£ §Y$building_research_lab_plural$§! with £building£ §Y$building_tec_illicit_lab_1_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_trade$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
 
-	civic_tec_regular_starseekers:0 "§P£tec_civic_job£§!Star Seekers"
-	civic_tec_regular_starseekers_desc:0 "['concept_tec_job_alteration_civic']\n\nTO DO."
-	civic_tec_regular_starseekers_tooltip:0 "TO DO"
+	# /
+	# Research specific focus
+		# Note: Focus on physics
+		civic_tec_regular_researchers_psi:0 "TO DO"
+		civic_tec_regular_researchers_psi_desc:0 "TO DO"
+
+		civic_tec_corporate_researchers_psi:0 "TO DO"
+		civic_tec_corporate_researchers_psi_desc:0 "TO DO"
+
+		# Note: Focus on bio
+		civic_tec_regular_researchers_bio:0 "TO DO"
+		civic_tec_regular_researchers_bio_desc:0 "TO DO"
+
+		civic_tec_corporate_researchers_bio:0 "TO DO"
+		civic_tec_corporate_researchers_bio_desc:0 "TO DO"
+
+		# Note: Focus on engineering
+		civic_tec_regular_researchers_mecha:0 "TO DO"
+		civic_tec_regular_researchers_mecha_desc:0 "TO DO"
+
+		civic_tec_corporate_researchers_mecha:0 "TO DO"
+		civic_tec_corporate_researchers_mecha_desc:0 "TO DO"
+
+		# Note: Automated research
+		civic_tec_regular_researchers_syngularity:0 "TO DO"
+		civic_tec_regular_researchers_syngularity_desc:0 "TO DO"
+
+		civic_tec_corporate_researchers_syngularity:0 "TO DO"
+		civic_tec_corporate_researchers_syngularity_desc:0 "TO DO"
+	# /
+	# Cult group
+
+	# /
 
 	# former civic_socialistic
 	# Note: Not job alteration but job addition
@@ -1413,7 +1483,7 @@
 
 	civic_tec_corporate_dystopian_society:1 "§L£tec_civic_feature£§!Dystopian Society"
 	civic_tec_corporate_dystopian_society_desc:1 "['concept_tec_feature_civic']\n['concept_tec_living_standard_civic']\n\nHigh quality products and commodities are reserved to the most loyal and premium clients - those who can afford them. It is the duty of the rest to pay their loans and credits to provide such goods, even if they will never even be close to obtain them."
-	civic_tec_corporate_dystopian_society_tooltip:1 "Force §Y$living_standard_dystopian_society$§! Living Standard, under which §Ynon-Ruler§! Jobs have decreased $r_consumer_goods$ Upkeep\nOnly §YRuler§! Jobs and  £job_enforcer£ $job_enforcer_plural$ have $r_amenities$ Upkeep\nMost £pop£ Pops generate §Y1§! additional £crime£ §Y$PLANET_CRIME_TITLE$§!\nOnly §YRuler§! Jobs can produce $r_amenities$\nForbids £building£ §Y$building_holo_theatres$§!"
+	civic_tec_corporate_dystopian_society_tooltip:1 "$civic_dystopian_society_tooltip$"
 
 	civic_tec_corporate_industrialcorp: "§L£tec_civic_feature£§!Galactic Automated Industrial Association"
 	civic_tec_corporate_industrialcorp_desc:0 "['concept_tec_feature_civic']\n\nThis Megacorporation has merged the concepts of production and profit, with industrial output elevated above all other concerns; refining advanced commodities while exploiting the max from the minus is central to this Megacorporation's business model. If the galaxy didn't want to be tapped, why everything is so profitable? Smog is the price of progress, baby!."
@@ -1496,9 +1566,9 @@
 	civic_tec_corporate_seekers_desc:0 "['concept_tec_job_alteration_civic']\n\nA big economic and social effort is made by this megacorporation in order to ensure the proper psychological development and searching for Inner Peace of its population, investing big sums of credits for it."
 	civic_tec_corporate_seekers_tooltip:0 "Each two upgrades of the £building£ §YCapital§! will provide a £job_transcend£ §Y$job_transcend$§! job.\n§YSystem Capital§! and §YCitadel of Faith§! provide additional §G+1§! £job_transcend£ $job_transcend$ Jobs, who produce small amount of §Y$tec_loc_unity$§!, §Y$tec_loc_research_resources$§! and reduce §YCrime§! \n\nThis empire has a increased chance to pick up §YPsionic Theory§! research option.\n\n"
 
-	civic_tec_corporate_labrats:0 "§P£tec_civic_job£§!Articled Testing"
-	civic_tec_corporate_labrats_desc:0 "['concept_tec_job_alteration_civic']\n\nWith progress comes profit, and with profit new ways of creating progress by ''first-handed'' intervention; Some completely willing to pay for new experiences, or others who are in need of a better income, all recruited and trained for experimenting with completely safe and totally not lethal new technologies and discoveries."
-	civic_tec_corporate_labrats_tooltip:0 "£building£ §YResearch Labs§! replace a £job_researcher£ Researcher job by a £job_researcher£ §YTest Subject§! worker job.\n£job_researcher£ Test Subjects produce §Y$tec_loc_research_resources$§! and a small amount of £trade_value£ §Y$TRADE_VALUE$§!, but have a slightly reduced £happiness£ §RHappiness§!.\n\nIf there is any £job_livestock£ Livestock species on the planet, £job_researcher£ Test Subjects will generate extra £trade_value£ §Y$TRADE_VALUE$§! and each livestock will generate additional §Y$tec_loc_research_resources$§!."
+	civic_tec_corporate_researchers_labrats:0 "§P£tec_civic_job£§!Articled Testing"
+	civic_tec_corporate_researchers_labrats_desc:0 "['concept_tec_job_alteration_civic']\n\nWith progress comes profit, and with profit new ways of creating progress by ''first-handed'' intervention; Some completely willing to pay for new experiences, or others who are in need of a better income, all recruited and trained for experimenting with completely safe and totally not lethal new technologies and discoveries."
+	civic_tec_corporate_researchers_labrats_tooltip:0 "£building£ §YResearch Labs§! replace a £job_researcher£ Researcher job by a £job_researcher£ §YTest Subject§! worker job.\n£job_researcher£ Test Subjects produce §Y$tec_loc_research_resources$§! and a small amount of £trade_value£ §Y$TRADE_VALUE$§!, but have a slightly reduced £happiness£ §RHappiness§!.\n\nIf there is any £job_livestock£ Livestock species on the planet, £job_researcher£ Test Subjects will generate extra £trade_value£ §Y$TRADE_VALUE$§! and each livestock will generate additional §Y$tec_loc_research_resources$§!."
 
 	civic_tec_corporate_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Alloy-Profiteering"
 	civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
