--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -160,7 +160,7 @@
 
 		councilor_civic_tec_regular_political_virtue:0 "Democratic Advisor"
 		councilor_civic_tec_regular_political_virtue_female:0 "$councilor_civic_tec_regular_political_virtue$"
-		councilor_civic_tec_regular_political_virtue_desc:0 "The empire $TITLE$ is tasked with searching the best democratic ways of representing the diverse ideas of its society."
+		councilor_civic_tec_regular_political_virtue_desc:0 "The empire's $TITLE$ is tasked with searching the best democratic ways of representing the diverse ideas of its society."
 		councilor_civic_tec_regular_political_virtue_custom_modifier:0 "NOT USED"
 		# Improve loc ^
 
@@ -307,35 +307,35 @@
 		councilor_civic_tec_regular_xenoreach_desc:0 "TO DO"
 		councilor_civic_tec_regular_xenoreach_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_labrats:0 "Main Experimenter"
-		councilor_civic_tec_regular_labrats_female:0 "$councilor_civic_tec_regular_labrats$"
-		councilor_civic_tec_regular_labrats_desc:0 "$TITLE$s devise the most unique ways of making test subject experiences as productive and ''interesting'' as possible."
-		councilor_civic_tec_regular_labrats_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_labrats:0 "Main Experimenter"
+		councilor_civic_tec_regular_researchers_labrats_female:0 "$councilor_civic_tec_regular_researchers_labrats$"
+		councilor_civic_tec_regular_researchers_labrats_desc:0 "$TITLE$s devise the most unique ways of making test subject experiences as productive and ''interesting'' as possible."
+		councilor_civic_tec_regular_researchers_labrats_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_diversifier:0 "TO DO"
-		councilor_civic_tec_regular_diversifier_female:0 "TO DO"
-		councilor_civic_tec_regular_diversifier_desc:0 "TO DO"
-		councilor_civic_tec_regular_diversifier_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_diversifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_diversifier_female:0 "TO DO"
+		councilor_civic_tec_regular_researchers_diversifier_desc:0 "TO DO"
+		councilor_civic_tec_regular_researchers_diversifier_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_astrologers:0 "TO DO"
-		councilor_civic_tec_regular_astrologers_female:0 "TO DO"
-		councilor_civic_tec_regular_astrologers_desc:0 "TO DO"
-		councilor_civic_tec_regular_astrologers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_astrologers:0 "TO DO"
+		councilor_civic_tec_regular_researchers_astrologers_female:0 "TO DO"
+		councilor_civic_tec_regular_researchers_astrologers_desc:0 "TO DO"
+		councilor_civic_tec_regular_researchers_astrologers_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_historians:0 "Creator of Axioms"
-		councilor_civic_tec_regular_historians_female:0 "$councilor_civic_tec_regular_historians$"
-		councilor_civic_tec_regular_historians_desc:0 "The $TITLE$ are entitled to apply laws of statistic, mathematics and deduction, plus enormous historical, social and scientific knowledge, to create axioms to guide population towards a prosperous future."
-		councilor_civic_tec_regular_historians_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_historians:0 "Creator of Axioms"
+		councilor_civic_tec_regular_researchers_historians_female:0 "$councilor_civic_tec_regular_researchers_historians$"
+		councilor_civic_tec_regular_researchers_historians_desc:0 "The $TITLE$ are entitled to apply laws of statistic, mathematics and deduction, plus enormous historical, social and scientific knowledge, to create axioms to guide population towards a prosperous future."
+		councilor_civic_tec_regular_researchers_historians_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_technomancer:0 "Exalted Technomagi"
-		councilor_civic_tec_regular_technomancer_female:0 "$councilor_civic_tec_regular_technomancer$"
-		councilor_civic_tec_regular_technomancer_desc:0 "The $TITLE$ combine technology and magic in a way no other could think or imagine."
-		councilor_civic_tec_regular_technomancer_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_technomancer:0 "Exalted Technomagi"
+		councilor_civic_tec_regular_researchers_technomancer_female:0 "$councilor_civic_tec_regular_researchers_technomancer$"
+		councilor_civic_tec_regular_researchers_technomancer_desc:0 "The $TITLE$ combine technology and magic in a way no other could think or imagine."
+		councilor_civic_tec_regular_researchers_technomancer_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_starseekers:0 "TO DO"
-		councilor_civic_tec_regular_starseekers_female:0 "TO DO"
-		councilor_civic_tec_regular_starseekers_desc:0 "TO DO"
-		councilor_civic_tec_regular_starseekers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_starseekers:0 "TO DO"
+		councilor_civic_tec_regular_researchers_starseekers_female:0 "TO DO"
+		councilor_civic_tec_regular_researchers_starseekers_desc:0 "TO DO"
+		councilor_civic_tec_regular_researchers_starseekers_custom_modifier:0 "TO DO"
 
 		councilor_civic_tec_regular_syndical:0 "Hero of the People"
 		councilor_civic_tec_regular_syndical_female:0 "Heroine of the People"
@@ -587,7 +587,7 @@
 	councilor_civic_tec_corporate_dystopian_society:0 "Corporate Overseer"
 	councilor_civic_tec_corporate_dystopian_society_female:0 "$councilor_civic_tec_corporate_dystopian_society$"
 	councilor_civic_tec_corporate_dystopian_society_desc:0 "The $TITLE$ seeks out corruption and extinguishes it before it can spread."
-	councilor_civic_tec_corporate_dystopian_society_custom_modifier:0 "$mod_pop_cat_ruler_happiness$: §G+1%§!\n$mod_planet_enforcers_trade_value_produces_add$: §G+0.2§!"
+	councilor_civic_tec_corporate_dystopian_society_custom_modifier:0 "$mod_pop_cat_ruler_happiness$: §G+1%§!\n$mod_planet_enforcers_trade_value_produces_add$: §G+0.4§!"
 
 	councilor_civic_tec_corporate_navaltraders:0 "Naval Insurer"
 	councilor_civic_tec_corporate_navaltraders_female:0 "$councilor_civic_tec_corporate_navaltraders$"
