--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
-	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6A III (§Y14-06-2023§!)"
+	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6A IV (§Y20-06-2023§!)"
 	TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
 	TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
 	TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
@@ -32,6 +32,7 @@
 	tec_loc_food:0 "£food£ $food$"
 	tec_loc_alloys:0 "£alloys£ $alloys$"
 	tec_loc_consumer_goods:0 "£consumer_goods£ $consumer_goods$"
+	tec_loc_cg:0 "$tec_loc_consumer_goods$"
 	tec_loc_unity:0 "£unity£ $unity$"
 
 	tec_loc_alloys_and_energy:0 "$tec_loc_alloys$ and $tec_loc_energy$"
@@ -71,6 +72,7 @@
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
 	tec_loc_trade_value_icon: "£trade_value£"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
+	tec_loc_trade: "$tec_loc_trade_value$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 
 
