--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -916,7 +916,7 @@
 	civic_tec_regular_xenoreach_desc:0 "TO_DO_WIP"
 	civic_tec_regular_xenoreach_tooltip:0 "a.\n\n"
 
-	# Research half-swap group
+	# Research half-swap
 		civic_tec_regular_researchers_labrats:0 "§P£tec_civic_job£§!Creative Testing"
 		civic_tec_regular_researchers_labrats_desc:0 "['concept_tec_job_alteration_civic']\n\nFor this society, the progress and advancements must be tested ''first-handed''; Voluntary and non voluntary test subjects are recruited and trained for experimenting with new technologies and discoveries."
 		civic_tec_regular_researchers_labrats_tooltip:0 "£building£ §YResearch Labs§! replace a £job_researcher£ Researcher job by a £job_researcher£ §YTest Subject§! worker job.\n- £job_researcher£ Test Subjects produce §Y$tec_loc_research_resources$§! at no upkeep, but have reduced £happiness£ §YHappiness§!.\n\nIf there is any £job_livestock£ Livestock species on the planet, £job_researcher£ Test Subjects will suffer no happiness penalty and each livestock will generate additional §Y$tec_loc_research_resources$§!."
@@ -971,11 +971,11 @@
 
 		civic_tec_regular_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Innovation" 
 		civic_tec_regular_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nPraxis and morale should not be barriers for development, and as such the majority of the conducted research on this society is done via more than questionable methods; abductions, collateral effects or tests on the population itself are the norm and generally oversighted by authorities, as technological progress advances relentlessly."
-		civic_tec_regular_researchers_illicit_tooltip:0 "§HReplaces Building:§! £building£ §Y$building_research_lab_plural$§! with £building£ §Y$building_tec_illicit_lab_1_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_research$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
+		civic_tec_regular_researchers_illicit_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_lab_1_plural$§!\n£building£ §Y$building_tec_illicit_lab_1_plural$§! replace £building£ §Y$building_research_lab_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_research$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
 
 			civic_tec_corporate_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Experimentation" 
 			civic_tec_corporate_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nSeveral undercover research agencies are hired by this corporation to conduct research experiments for the profitable advancement of the empire; while it is, surely, done via more than questionable methods, the economical and technological progress report immense growth values."
-			civic_tec_corporate_researchers_illicit_tooltip:0 "§HReplaces Building:§! £building£ §Y$building_research_lab_plural$§! with £building£ §Y$building_tec_illicit_lab_1_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_trade$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
+			civic_tec_corporate_researchers_illicit_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_lab_1_plural$§!\n£building£ §Y$building_tec_illicit_lab_1_plural$§! replace £building£ §Y$building_research_lab_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_trade$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
 
 	# /
 	# Research specific focus
@@ -1007,9 +1007,26 @@
 		civic_tec_corporate_researchers_syngularity:0 "TO DO"
 		civic_tec_corporate_researchers_syngularity_desc:0 "TO DO"
 	# /
-	# Cult group
+	# Priest half swap
 
 	# /
+	# Priest full swap
+
+	# /
+	# Enforcers half swap
+
+	# /
+	# Enforcers full swap
+
+	# /
+
+	# Soldiers half swap
+
+	# /
+	# Soldiers swap
+		
+	# /
+
 
 	# former civic_socialistic
 	# Note: Not job alteration but job addition
@@ -1436,10 +1453,6 @@
 	civic_tec_corporate_comunistcorp:0 "§L£tec_civic_feature£§!Universal Ownership"
 	civic_tec_corporate_comunistcorp_desc:0 "['concept_tec_feature_civic']\n\nThis Megacorporation embraces a cooperative model where employee, shareholder, and citizen are all one and the same, without sacrificing individual liberties or fee rights."
 
-	civic_tec_corporate_pacificationcorp:0 "§L£tec_civic_feature£§!Insured Pacificators"
-	civic_tec_corporate_pacificationcorp_desc:0 "['concept_tec_feature_civic']\n\nThis Megacorp assembles and operates a highly efficient (and not held back by moral) army of mechanized Police Forces, enforcing the law as it is written without leniency or mercy, backed by a strong insurance policy and diverse alarm and protection systems.\n\n§HCasual ''collateral damage'' or ''punctual exemptions on verified individuals'' are contemplated as clauses in the contract.§!"
-	civic_tec_corporate_pacificationcorp_tooltip:1 "Replaces anti-crime buildings with £building£§YOmni-Guard Sites§!, providing £job_omniguard£§YOmniguard§!\nThis building is also available as branch office building, providing the same benefits but also generating extra §Y$tec_loc_trade_value$§! if £crime£ §RCrime§! is low.\n\n"
-
 	civic_tec_corporate_cooperacorp:0 "§L£tec_civic_feature£§!Corporative Sub-Branching"
 	civic_tec_corporate_cooperacorp_desc:0 "['concept_tec_feature_civic']\n\nReal competition and conflict are worthless if those doesn't prove a real challenge to improve and provide better services than others, so it's always enriching allowing the competition to see, experience and enjoy peacefully your wealth while you get richer and richer.\n"
 	civic_tec_corporate_cooperacorp_tooltip:1 "Allows other §YMegacorps§! to open £building£ §YBranch offices§! on your planets, and allow your empire to open £building£ §YBranch offices§! on other §YMegacorp§! planets.\nOpening a Branch Office on Megacorp planets has a increased £influence£ §YInfluence§! cost and £building£ Branch Capitals provide no scaling branch office bonuses there.\n\n"
@@ -1574,6 +1587,48 @@
 	civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
 	civic_tec_corporate_quantum_alloys_tooltip:0 "$civic_tec_regular_quantum_alloys_tooltip$"
  # /
+	# Researcher half swap
+
+	# /
+	# Researcher swap
+
+	# /
+
+	# Priest half swap
+
+	# /
+	# Priest full swap
+
+	# /
+
+	# Enforcers half swap
+		civic_tec_corporate_enforcers_omniguard:0 "§P£tec_civic_job£§!Omni-Centinels"	#NOT DONE
+		civic_tec_corporate_enforcers_omniguard_desc:0 "['concept_tec_feature_civic']\n\nMass-produced robotic guards conform the vigilancy and safety body of this Corporation."
+		civic_tec_corporate_enforcers_omniguard_tooltip:1 "TO DO"
+		#"Replaces anti-crime buildings with £building£§YOmni-Guard Sites§!, providing £job_omniguard£§YOmniguard§!\nThis building is also available as branch office building, providing the same benefits but also generating extra §Y$tec_loc_trade_value$§! if £crime£ §RCrime§! is low.\n\n"
+	# /
+	# Enforcers full swap
+		civic_tec_corporate_enforcers_automation:0 "§P£tec_civic_job£§!Insured Pacificators"	#NOT DONE
+		civic_tec_corporate_enforcers_automation_desc:0 "['concept_tec_feature_civic']\n\nThis Megacorp assembles and operates a highly efficient (and not held back by moral) army of mechanized automated Police Forces, enforcing the law as it is written without leniency or mercy, backed by a strong insurance policy and diverse alarm and protection systems.\n\n§HCasual ''collateral damage'' or ''punctual exemptions on verified individuals'' are contemplated as clauses in the contract.§!"
+		civic_tec_corporate_enforcers_automation_tooltip:1 "§HUnlocks Building:§! £building£ §Y$building_tec_anticrime_pacification_site_1$§!\n£building£ §Y$building_tec_anticrime_pacification_site_1_plural$§! replace £building£ §Y$building_precinct_house_plural$§!, reducing §Y$tec_loc_crime$§! automatically in exchange of a big amount of §Y$tec_loc_amenities$§!.\n\n£building£ §Y$building_tec_anticrime_pacification_site_1_plural$§! inherit £job_enforcer£ §Y$job_enforcer_plural$§! additional modifiers.\n\n§HUnlocks Holding:§! £building£ §Y$holding_tec_anticrime_pacification_site$§!\n£building£ §Y$holding_tec_anticrime_pacification_site_plural$§! bring the effects of §Y$building_tec_anticrime_pacification_site_1_plural$§! to vassals.\n\n§HDetection Bonus:§!$tec_loc_civic_increases_technological_detection$\n\n"
+
+		civic_tec_corporate_enforcers_precognition:0 "§P£tec_civic_job£§!Precog Surveyors"	#NOT DONE
+		civic_tec_corporate_enforcers_precognition_desc:0 "['concept_tec_feature_civic']\n\nStopping a crime before it even happens, provide generous policities of insurance to folster prevention, etc - All ensured by a corps of precognitive police, using theorical calculation and pseudo-psychic abilities to detect and stop any crime before it happens."
+		civic_tec_corporate_enforcers_automation_tooltip:1 "§HUnlocks Building:§! £building£ §Y$building_tec_anticrime_precognition_site_1$§!\n£building£ §Y$building_tec_anticrime_precognition_site_1_plural$§! replace £building£ §Y$building_precinct_house_plural$§!, providing £job_tec_precog_enforcer£ §Y$job_tec_precog_enforcer$§!\n$job_tec_precog_enforcer_effect_desc$\n\n§HUnlocks Holding:§! £building£ §Y$holding_tec_anticrime_precognition_site$§!\n£building£ §Y$holding_tec_anticrime_precognition_site_plural$§! bring the effects of §Y$building_tec_anticrime_precognition_site_1_plural$§! to vassals.\n\n§HDetection Bonus:§!$tec_loc_civic_increases_overall_detection$\n\n"
+	# /
+	# Soldiers half swap
+
+	# /
+	# Soldiers swap
+		civic_tec_corporate_soldier_mechs:0 "§P£tec_civic_job£§!Naval Simulations"	#NOT DONE
+		civic_tec_corporate_soldier_mechs_desc:0 "['concept_tec_feature_civic']\n\nTOP DO."
+		civic_tec_corporate_soldier_mechs_tooltip:1 "§HUnlocks Feature:§! TO DO\n\n"
+
+		civic_tec_corporate_naval_simulations:0 "§P£tec_civic_job£§!Naval Simulations"	#NOT DONE
+		civic_tec_corporate_naval_simulations_desc:0 "['concept_tec_feature_civic']\n\nMost of the naval operations of this corporation are done remotely by several group of experienced emulators and digital pilots, ''playing'' tactical games emulating naval movements and applying those tactics remotely on service, acting not only as a clear military advantage due to reduction of risked personnel, but also a source of profitable public spectacle used for entertainment of the population."
+		civic_tec_corporate_naval_simulations_tooltip:1 "§HUnlocks Feature:§! £building£ §Y$building_tec_naval_relay_1_plural$§!\n£building£ §Y$building_tec_naval_relay_1_plural$§! replace £building£ §Y$building_tec_naval_academy$§! and £building£ §Y$building_holo_theaters$§! and provide £job_tec_emulator_pilot£ §Y$job_tec_emulator_pilot_plural$§!\n\n$job_tec_emulator_pilot_effect_desc$\n\nA\n\n"
+
+	# /
 # /
 
 # Megacorp Basic Civics
