--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -1,10 +1,16 @@
 ﻿l_english:
 
 # ------------------------------------------------------------
+# SCRIPTED modifiers
+# ------------------------------------------------------------
+	mod_pop_job_naval_mult:0 "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$ from £job£ Jobs"
+
+
+# ------------------------------------------------------------
 # ORIGIN Modifiers
 # ------------------------------------------------------------
- tec_stop_arkfleet:0 "Lack of fleet protocols"
- tec_stop_arkfleet_desc:0 "This fleet colonization protocols are halted until a decision is done"
+	tec_stop_arkfleet:0 "Lack of fleet protocols"
+	tec_stop_arkfleet_desc:0 "This fleet colonization protocols are halted until a decision is done"
 
 
 # EMPIRE MODIFIERS
