--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -80,6 +80,7 @@
 
 	tec_loc_edict_funds:0 "£mod_country_edict_fund_add£  $MOD_COUNTRY_EDICT_FUND_ADD$"
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
+	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$"
 	tec_loc_admin_cap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
 	tec_loc_district: "£district£ $DISTRICT$"
